--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -1,6 +1,6 @@
 name: example
 description: A new Flutter project.
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+publish_to: 'none'
 
 version: 1.0.0+1
 
@@ -13,7 +13,10 @@ dependencies:
   iconsax_flutter:
     path: ../
   url_launcher: ^6.2.2
-
+  google_fonts: ^6.1.0
+  hooks_riverpod:
+  flutter_hooks:
+  flutter_riverpod:
 
   cupertino_icons: ^1.0.2
 
@@ -24,3 +27,7 @@ dev_dependencies:
 flutter:
 
   uses-material-design: true
+
+
+  assets:
+    - assets/images/
