feat: removed cached file and add dependencies version

--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -14,9 +14,9 @@ dependencies:
     path: ../
   url_launcher: ^6.2.2
   google_fonts: ^6.1.0
-  hooks_riverpod:
-  flutter_hooks:
-  flutter_riverpod:
+  hooks_riverpod: ^2.4.9
+  flutter_hooks: ^0.20.3
+  flutter_riverpod: ^2.4.9
 
   cupertino_icons: ^1.0.2
 
